added glyphicons on modal

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
         <div class="hamburger">
             <span class="glyphicon glyphicon-menu-hamburger"></span>
         </div>
-        <span class="pipe">&#124;</span>
         <div class="logo">
             <span>tinder</span>
         </div>
@@ -41,13 +40,13 @@
             </div>
             <div class="footer">
                 <div>
-                    <a class="btn">Send a Message</a>
+                    <a class="btn"><span class="glyphicon glyphicon-send"></span>&nbsp;&nbsp;Send a Message</a>
                 </div>
                 <div>
-                    <a class="btn">Keep Playing</a>
+                    <a class="btn"><span class="glyphicon glyphicon-play"></span>&nbsp;&nbsp;Keep Playing</a>
                 </div>
                 <div>
-                    <a class="link">Tell your friends</a>
+                    <a class="link"><span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Tell your friends</a>
                 </div>
             </div>
         </div>
