removed index.js copies, change modal overflow

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
     <script type="text/javascript" src="libraries/angular.min.js"></script>
     <script type="text/javascript" src="libraries/hammer.min.js"></script>
     <script type="text/javascript" src="libraries/angular.hammer.min.js"></script>
-    <script type="text/javascript" src="index4.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     <script>
 
     </script>
