--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <title>Tinder Full Stack Coding Challenge</title>
     <link rel="stylesheet" href="index.css">
-    <!--<link rel="stylesheet" href="libraries/bootstrap.min.css">-->
+    <link rel="stylesheet" href="libraries/bootstrap.min.css">
 </head>
 <body>
     <div id="navbar">
